refactor(all): several cleanups